[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["service_ppt*"]
exclude = ["applescript", "sample", "screenshot", "scripts", "venv", "*.egg-info", "__pycache__", "tests"]

[project]
name = "service-ppt"
version = "0.1.0"
description = "Service PowerPoint application"
requires-python = ">=3.12"
dependencies = [
    "iso639-lang>=2.0.0",
    "langdetect>=1.0.9",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "python-pptx>=0.6.23",
    "pysword>=0.2.7",
    "pywin32>=306; sys_platform == 'win32'",
    "py-applescript>=1.0.3; sys_platform == 'darwin'",
    "six>=1.16.0",
    "wxPython>=4.2.0",
]

[project.scripts]
service-ppt = "service_ppt.__main__:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings (includes W291, W293 for trailing whitespace)
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["service_ppt"]
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
