[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["service_ppt*"]
exclude = ["applescript", "sample", "screenshot", "scripts", "venv", "*.egg-info", "__pycache__", "tests"]

[project]
name = "service-ppt"
version = "0.1.0"
description = "Service PowerPoint application"
requires-python = ">=3.12"
dependencies = [
    "iso639-lang>=2.0.0",
    "langdetect>=1.0.9",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "python-pptx>=0.6.23",
    "pysword>=0.2.7",
    "pywin32>=306; sys_platform == 'win32'",
    "py-applescript>=1.0.3; sys_platform == 'darwin'",
    "six>=1.16.0",
    "wxPython>=4.2.0",
]

[project.scripts]
service-ppt = "service_ppt.__main__:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest>=8.0.0",
    "pydocstyle>=6.0.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors (PEP 8)
    "W",     # pycodestyle warnings (includes W291, W293 for trailing whitespace)
    "F",     # pyflakes (undefined names, unused imports)
    "I",     # isort (import sorting per PEP 8)
    "N",     # pep8-naming (naming conventions)
    "UP",    # pyupgrade (modernize code)
    "B",     # flake8-bugbear (common bugs)
    "C4",    # flake8-comprehensions (better comprehensions)
    "SIM",   # flake8-simplify (code simplification)
    "PIE",   # flake8-pie (miscellaneous checks)
    "RET",   # flake8-return (return statement checks)
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["service_ppt"]
force-sort-within-sections = true
split-on-trailing-comma = true
force-single-line = false
# Smarkets style: regular imports before 'from' imports
# This puts 'import x' before 'from x import y' within each section
from-first = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
# Ruff formatter respects # fmt: off and # fmt: on comments by default
# These directives allow you to exclude specific code sections from formatting

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

# Sphinx documentation configuration
# Docstrings should use Sphinx-style format with :param, :returns, etc.
# When type hints are present in function signatures, :type: and :rtype: are optional.
# To generate documentation, install dev dependencies and run: sphinx-build -b html docs/ docs/_build/
#
# Docstring enforcement:
# - Use pydocstyle to check basic docstring presence and structure
# - Sphinx-specific format validation (e.g., :param syntax) is not automatically enforced
#   but should follow the Sphinx style guide
# - Run: pydocstyle service_ppt/ to check docstring compliance

[tool.pydocstyle]
# Use PEP 257 convention (base for Sphinx-style docstrings)
convention = "pep257"
# Match all Python files except tests
match = "(?!test_).*\\.py"
# Ignore missing docstrings in __init__ methods (often empty)
# Note: add-ignore works with convention, while ignore does not
add-ignore = ["D107"]  # Missing docstring in __init__
